--- a/client/src/App.css
+++ b/client/src/App.css
@@ -5,6 +5,15 @@
   text-align: center;
 }
 
+.table {
+  width: 100%;
+  border-collapse: collapse;
+}
+.cell, .header {
+  border: 1px solid #ccc;
+  padding: 0.5rem;
+}
+
 .logo {
   height: 6em;
   padding: 1.5em;
